# pbcopper

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  bamboo_build.sh  bamboo_coverage.sh  bamboo_test.sh  build.sh  circle.yml  meson.build  meson_options.txt
docs/: CMakeLists.txt  meson.build
examples/cli_demo/: CMakeLists.txt  main.cpp  meson.build
include/: meson.build
include/pbcopper/: Config.h  LibraryInfo.h  PbcopperConfig.h  PbcopperMakeUnique.h  meson.build
include/pbcopper/algorithm/: Heteroduplex.h  KMerIndex.h  LSHIndex.h
include/pbcopper/align/: AffineAlignment.h  AlignConfig.h  BandedChainAlignment.h  ChainSeeds.h  ChainSeedsConfig.h  EdlibAlign.h  FindSeeds.h  GlobalLocalAlignment.h  LinearAlignment.h  LocalAlignment.h  PairwiseAlignment.h  Seed.h  Seeds.h  SparseAlignment.h
include/pbcopper/cli/: BuiltInOption.h  CLI.h  HelpPrinter.h  Interface.h  Option.h  OptionFlags.h  Parser.h  PositionalArg.h  Results.h  SingleDashMode.h  VersionPrinter.h
include/pbcopper/cli2/: CLI.h  Interface.h  MultiToolInterface.h  Option.h  OptionGroup.h  OptionValue.h  PositionalArgument.h  README.md  Result.h  Results.h  ResultsHandler.h  Tool.h  VersionPrinterCallback.h
include/pbcopper/container/: BitContainer.h  BitConversion.h  BitmaskContainer.h  CapacityPointer.h  Contains.h  DNAString.h  RHUnordered.h  Unordered.h
include/pbcopper/cuda/: AsciiConversion.h  Cuda.h  ThreadBlockHelper.h
include/pbcopper/dagcon/: Alignment.h  AlignmentGraph.h
include/pbcopper/data/: Accuracy.h  CCSTag.h  Cigar.h  CigarOperation.h  Clipping.h  FrameCodec.h  FrameEncoders.h  Frames.h  GenomicInterval.h  Interval.h  IntervalTree.h  LocalContextFlags.h  MappedRead.h  MappedSimpleRead.h  MovieName.h  Orientation.h  Position.h  QualityValue.h  QualityValues.h  RSMovieName.h  RSReadName.h  Read.h  ReadId.h  ReadName.h  SNR.h  SimpleRead.h  Strand.h  Zmw.h
include/pbcopper/json/: JSON.h
include/pbcopper/logging/: LogConfig.h  LogField.h  LogLevel.h  LogMessage.h  Logging.h
include/pbcopper/math/: ConfusionMatrix.h  FishersExact.h
include/pbcopper/numeric/: Helper.h
include/pbcopper/parallel/: FireAndForget.h  FireAndForgetIndexed.h  ThreadCount.h  WorkQueue.h
include/pbcopper/pbmer/: Bubble.h  Dbg.h  DbgNode.h  DnaBit.h  KFGraph.h  KFNode.h  Kmer.h  Mers.h  Parser.h  SparseHaplotype.h
include/pbcopper/poa/: PoaConsensus.h  PoaGraph.h  RangeFinder.h  SparsePoa.h
include/pbcopper/qgram/: Index.h  IndexHit.h  IndexHits.h
include/pbcopper/reports/: Report.h
include/pbcopper/stream/: Stream.h
include/pbcopper/utility/: Alarm.h  Alarms.h  Base64.h  CallbackTimer.h  Deleters.h  EnumClassHash.h  FastMod.h  FileUtils.h  GitHash.h.in  Intrinsics.h  MemoryConsumption.h  MinMax.h  MoveAppend.h  MoveInsert.h  OStreamRedirect.h  Overloaded.h  PartitionElements.h  PbcopperVersion.h  PbcopperVersion.h.in  Random.h  SafeSubtract.h  SequenceUtils.h  Shuffle.h  Ssize.h  Stopwatch.h  StringUtils.h  StringView.h  SystemInfo.h  TimeReporter.h  Unused.h  Version.h.in  meson.build
src/: CMakeLists.txt  LibraryGitHash.h.in  LibraryInfo.cpp  LibraryVersion.h.in  files.cmake  meson.build
src/algorithm/: Heteroduplex.cpp  KMerIndex.cpp
src/align/: AffineAlignment.cpp  AlignConfig.cpp  BandedChainAlignment.cpp  ChainSeeds.cpp  ChainSeedsConfig.cpp  EdlibAlign.cpp  FilterHomopolymers.h  FindSeeds.cpp  GlobalLocalAlignment.cpp  LinearAlignment.cpp  LocalAlignment.cpp  PairwiseAlignment.cpp  Seed.cpp  Seeds.cpp  SparseAlignment.cpp
src/align/cssw/: ssw.c  ssw.h  ssw_cpp.cpp  ssw_cpp.h
src/cli/: CLI.cpp  HelpPrinter.cpp  Interface.cpp  Option.cpp  Parser.cpp  Results.cpp  VersionPrinter.cpp
src/cli/toolcontract/: JsonPrinter.cpp  ResolvedToolContract.cpp
src/cli2/: CLI.cpp  CommandLineParser.cpp  HelpMetrics.cpp  Interface.cpp  InterfaceHelpPrinter.cpp  MultiToolInterface.cpp  MultiToolInterfaceHelpPrinter.cpp  Option.cpp  OptionTranslator.cpp  OptionValue.cpp  PbBoilerplateDisclaimer.h  PositionalArgumentTranslator.cpp  Result.cpp  Results.cpp  VersionPrinter.cpp
src/dagcon/: Alignment.cpp  AlignmentGraph.cpp
src/data/: Accuracy.cpp  Cigar.cpp  CigarOperation.cpp  Clipping.cpp  FrameEncoders.cpp  Frames.cpp  GenomicInterval.cpp  Interval.cpp  IntervalTree.cpp  MappedRead.cpp  MappedSimpleRead.cpp  MovieName.cpp  QualityValue.cpp  QualityValues.cpp  RSMovieName.cpp  Read.cpp  ReadId.cpp  ReadName.cpp  SNR.cpp  SimpleRead.cpp  Strand.cpp
src/logging/: LogConfig.cpp  LogLevel.cpp  LogMessage.cpp  Logging.cpp
src/math/: FishersExact.cpp
src/parallel/: FireAndForget.cpp  ThreadCount.cpp
src/pbmer/: Dbg.cpp  DbgNode.cpp  DnaBit.cpp  KFGraph.cpp  KFNode.cpp  Kmer.cpp  Mers.cpp  Parser.cpp  SparseHaplotype.cpp
src/poa/: BoostGraph.h  PoaAlignmentMatrix.cpp  PoaAlignmentMatrix.h  PoaConsensus.cpp  PoaGraph.cpp  PoaGraphImpl.cpp  PoaGraphImpl.h  PoaGraphTraversals.cpp  RangeFinder.cpp  SparsePoa.cpp  VectorL.h
src/reports/: Report.cpp  ReportPrinter.cpp  ReportPrinter.h  TaskReport.cpp
src/utility/: Alarm.cpp  Alarms.cpp  Base64.cpp  CallbackTimer.cpp  Deleters.cpp  FastMod.cpp  MemoryConsumption.cpp  PbcopperGitHash.cpp.in  PbcopperVersion.cpp.in  Random.cpp  Stopwatch.cpp  StringUtils.cpp  StringView.cpp  TimeReporter.cpp  meson.build
tests/: CMakeLists.txt  files.cmake  meson.build
tests/data/: resolved_tool_contract.txt
tests/include/: OStreamRedirector.h  PbcopperTestData.h.in
tests/src/algorithm/: test_Heteroduplex.cpp  test_KMerIndex.cpp  test_LSHIndex.cpp
tests/src/align/: test_Alignment.cpp  test_BandedChainAlign.cpp  test_EdlibAlign.cpp  test_GlobalLocalAlignment.cpp  test_Seeds.cpp
tests/src/cli/: test_CLI.cpp  test_CLI.cpp.in  test_HelpPrinter.cpp  test_Interface.cpp  test_Option.cpp  test_ResolvedToolContract.cpp  test_Results.cpp  test_ToolContractJsonPrinter.cpp  test_VersionPrinter.cpp
tests/src/cli2/: test_CLI.cpp  test_CommandLineParser.cpp  test_Interface.cpp  test_InterfaceHelpPrinter.cpp  test_MultiToolInterfaceHelpPrinter.cpp  test_OptionTranslator.cpp  test_OptionValue.cpp  test_PositionalArgumentTranslator.cpp  (+2 more)
(+131 files in other folders)
