option('enable-build-examples', type : 'boolean', value : true,  description : 'Build pbcopper examples')
option('enable-build-docs',     type : 'boolean', value : false, description : 'Build pbcopper docs')
option('enable-tests',          type : 'boolean', value : true,  description : 'Build pbcopper tests')
